# HLEnhanced

./: .gitignore  .travis.yml  CMakeLists.txt  about.htm  appveyor.yml  appveyor_install_dependencies.ps1  design.css  documentation.htm  downloads.htm  index.htm  social.htm  travis_install_dependencies.sh
cmake/: WinXPSupport.cmake
common/: CMakeLists.txt  Platform.h  sizebuf.h
docs/: _c_a_s_plugin_data_8h_source.html  _c_hud_ammo_8h_source.html  cl__util_8h_source.html  class_c_a_s_plugin_data-members.html  class_c_a_s_plugin_data.html  class_c_a_s_plugin_data.js  functions_func_r.html  functions_func_s.html  functions_r.html  functions_s.html  hierarchy.html  hierarchy.js  navtreedata.js  navtreeindex24.js  navtreeindex29.js  navtreeindex30.js  navtreeindex31.js  navtreeindex32.js  navtreeindex33.js  navtreeindex34.js  navtreeindex35.js  navtreeindex36.js  navtreeindex37.js  navtreeindex38.js  navtreeindex39.js  navtreeindex40.js  navtreeindex41.js  navtreeindex42.js  navtreeindex43.js  navtreeindex44.js  navtreeindex45.js  navtreeindex46.js  navtreeindex47.js  navtreeindex48.js  navtreeindex49.js  navtreeindex50.js  navtreeindex51.js  navtreeindex52.js  navtreeindex53.js  navtreeindex54.js  (+43 more)
docs/search/: all_12.js  all_13.js  all_14.js  all_16.js  all_e.js  functions_12.js  functions_13.js
engine/: CMakeLists.txt  EngineDefs.h  custom.h
engine/server/: CMakeLists.txt  IEngineInfo.h  Server.h  client_t.h
game/client/: CClientGameInterface.cpp  CClientGameInterface.h  CClientGameLib.cpp  CClientGameLib.h  CMakeLists.txt  cdll_int.cpp  ev_hldm.cpp  ev_hldm.h
game/client/hl/: CClientPrediction.cpp  hl_events.cpp
game/client/renderer/: view.cpp
game/client/ui/: CClientVGUI.cpp
game/server/: CMakeLists.txt  CServerGameInterface.cpp  CServerGameInterface.h  CServerGameLib.cpp  CServerGameLib.h  Server.cpp  Skill.cpp  Skill.h  Weapons.cpp  client.cpp
game/server/engine/: CEngineInfo.cpp  CEngineInfo.h  CMakeLists.txt  CServerEngineHacks.cpp  CServerEngineHacks.h
game/server/entities/: CBaseEntity.combat.cpp
game/server/entities/NPCs/: Activity.cpp  ActivityMap.h  CBarney.cpp  CBarney.h  CMakeLists.txt  CPenguinGrenade.cpp  CPenguinGrenade.h
game/server/entities/ammo/: CAmmo556.cpp  CAmmo556.h  CSporeAmmo.cpp  CSporeAmmo.h
game/server/entities/effects/: CMakeLists.txt  CSpriteTrain.cpp  CSpriteTrain.h
game/server/entities/plats/: CFuncTrain.cpp  CFuncTrain.h
game/server/entities/player/: CBasePlayer.frame.cpp  CBasePlayer.server.game.cpp
game/server/entities/rope/: CElectrifiedWire.cpp  CElectrifiedWire.h  CRope.cpp  CRope.h  CRopeSample.cpp  CRopeSample.h  CRopeSegment.cpp  CRopeSegment.h
game/server/entities/triggers/: CMakeLists.txt  CTriggerPlayerFreeze.cpp  CTriggerPlayerFreeze.h  CTriggerXenReturn.cpp  CTriggerXenReturn.h
game/server/entities/weapons/: CDesertEagleLaser.cpp  CDesertEagleLaser.h  CDisplacerBall.cpp  CDisplacerBall.h  CShockBeam.cpp  CShockBeam.h  CSpore.cpp  CSpore.h
game/shared/: CBaseGameInterface.cpp  CBaseGameInterface.h  CMakeLists.txt  FileSystemHelpers.cpp  FileSystemHelpers.h  WeaponsConst.h  Weapons_Shared.cpp  cdll_dll.h  shared_game_utils.h
game/shared/Angelscript/ScriptAPI/Entities/: ASCBaseEntity.cpp
game/shared/entities/: CBaseEntity.shared.cpp
game/shared/entities/player/: CBasePlayer.h
game/shared/entities/weapons/: CBarnacleGrapple.cpp  CBarnacleGrapple.h  CBarnacleGrappleTip.cpp  CBarnacleGrappleTip.h  CDesertEagle.cpp  CDesertEagle.h  CDisplacer.cpp  CDisplacer.h  CKnife.cpp  CKnife.h  CM249.cpp  CM249.h  CPenguin.cpp  CPenguin.h  CPipewrench.cpp  CPipewrench.h  CShockRifle.cpp  CShockRifle.h  CSniperRifle.cpp  CSniperRifle.h  CSporeLauncher.cpp  CSporeLauncher.h
game/shared/server/: CMakeLists.txt  IServerGameInterface.h
gamerc/mapsrc/: test_playerfreeze.map  test_playerfreeze.rmf  test_spritetrain.map  test_spritetrain.rmf
pm_shared/: pm_shared.cpp  pm_shared.h
projects/vs2015/: hl_cdll.vcxproj  hl_cdll.vcxproj.filters  hldll.vcxproj  hldll.vcxproj.filters  readme.txt
shared/engine/: CMakeLists.txt  IEngineModel.h
shared/engine/client/: CMakeLists.txt  IClientEngine.h
shared/engine/server/: CMakeLists.txt  IServerEngine.h
shared/game/client/: CMakeLists.txt  IClientGameLib.h
shared/game/server/: CMakeLists.txt  IServerGameLib.h
utils/: CMakeLists.txt
utils/bspinfo/: CMakeLists.txt  bspinfo.cpp
utils/common/: bspfile.cpp  bspfile.h  bsplib.cpp  bsplib.h  cmdlib.cpp  cmdlib.h  lbmlib.cpp  lbmlib.h  mathlib.h  polylib.cpp  polylib.h  scriplib.h  threads.cpp  threads.h  trilib.cpp  wadlib.cpp  wadlib.h
utils/light/: CMakeLists.txt  light.cpp  light.h  ltface.cpp  trace.cpp
utils/makefont/: CMakeLists.txt  makefont.cpp
utils/makels/: CMakeLists.txt  makels.cpp
utils/mdlviewer/: CMakeLists.txt  mdlviewer.cpp  studio_render.cpp  studio_utils.cpp
utils/mkmovie/: CMakeLists.txt  mkmovie.cpp
utils/procinfo/: CMakeLists.txt  procinfo.cpp  procinfo.h
utils/qbsp2/: CMakeLists.txt  bsp5.h  gldraw.cpp  outside.cpp  portals.cpp  qbsp.cpp  solidbsp.cpp  surfaces.cpp  tjunc.cpp  writebsp.cpp
utils/qcsg/: CMakeLists.txt  brush.cpp  csg.h  gldraw.cpp  map.cpp  qcsg.cpp  textures.cpp
utils/qlumpy/: CMakeLists.txt  qlumpy.cpp  quakegrb.cpp
utils/qrad/: CMakeLists.txt  lightmap.cpp  qrad.cpp  qrad.h  trace.cpp  vismat.cpp
utils/serverctrl/: CMakeLists.txt  ServerCtrlDlg.cpp
utils/smdlexp/: CMakeLists.txt
utils/sprgen/: CMakeLists.txt  sprgen.cpp
utils/studiomdl/: CMakeLists.txt  bmpread.cpp  studiomdl.cpp  tristrip.cpp  write.cpp
utils/visx2/: CMakeLists.txt  flow.cpp  soundpvs.cpp  vis.cpp
utils/xwad/: CMakeLists.txt  xwad.cpp
